#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libmysqlloader], [0.0.0], [vincentdm@gmail.com])
AC_CONFIG_HEADERS([src/config.h])

AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_CC


LT_INIT

LTDL_INIT
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 libltdl/Makefile
                 src/Makefile
                 src/include/Makefile])
AC_OUTPUT
